--- a/package.json
+++ b/package.json
@@ -2,15 +2,38 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@babel/core": "7",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/runtime": "7",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "8",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "compression-webpack-plugin": "9",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
+    "prop-types": "^15.8.1",
     "rails_admin": "3.1.2",
-    "sass": "^1.69.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-on-rails": "13.4.0",
+    "sass": "^1.69.5",
+    "shakapacker": "7.0.1",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "5",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
+    "webpack-merge": "5"
   },
   "scripts": {
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
@@ -20,5 +43,10 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "react-refresh": "^0.14.0",
+    "webpack-dev-server": "4"
+  }
 }
