Added new admin panel

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "react-refresh": "^0.14.0",
     "webpack-dev-server": "4"
+  },
+  "resolutions": {
+    "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
   }
 }
